--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Debugging HTML Practice
+    <title>Debugging HTML Practice</title>
   </head>
   <body>
     <div class='profile'>
-        <h6>Profile Name</h6>
+        <h1>Profile Name</h1>
+    </div>
         <div class='address'>Address</div>
 
         <div class='contact'>
@@ -17,15 +18,13 @@
 
         <div class='categories'>
           <h2>Categories</h2>
-          <li>
-            <ul>Lorem ipsum</ul>
-            <ul>dolor sit</ul>
-            <ul>amet</ul>
-            <ul>dolor sit</ul>
-          </li>
+          <ul>
+            <li>Lorem ipsum</li>
+            <li>dolor sit</li>
+            <li>amet</li>
+            <li>dolor sit</li>
+          </ul>
         </div>
-
-      </div>
 
       <div id='biography'>
         <p>
@@ -52,11 +51,6 @@
 
         <div class='footer-3-wide'>
           <ul>
-            <ol>
-              <a href='https://www.example.com/' target='_blank'>
-                Lorem ipsum dolor sit amet
-              </a>
-            </li>
             <li>
               <a href='https://www.example.com/' target='_blank'>
                 Lorem ipsum dolor sit amet
@@ -71,7 +65,12 @@
               <a href='https://www.example.com/' target='_blank'>
                 Lorem ipsum dolor sit amet
               </a>
-
+            </li>
+            <li>
+              <a href='https://www.example.com/' target='_blank'>
+                Lorem ipsum dolor sit amet
+              </a>
+            </li>
           </ul>
         </div>
 
